Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/TypeVariableMissingTA.out
TypeVariableMissingTA.java:18:40: compiler.err.cant.resolve: kindname.class, MISSING, , 
1 error
